--- a/index.html
+++ b/index.html
@@ -19,46 +19,25 @@
   animation:fadeOut 1s ease 4s forwards;
 }
 
-.welcome-box{
-  text-align:center;
-  z-index:2;
-}
+.welcome-box{text-align:center;z-index:2}
+.welcome-box h1{color:#8b263e;font-size:32px;margin-bottom:10px}
+.welcome-box p{color:#3e2f1c;font-size:16px}
 
-.welcome-box h1{
-  color:#8b263e;
-  font-size:32px;
-  margin-bottom:10px;
-}
-
-.welcome-box p{
-  color:#3e2f1c;
-  font-size:16px;
-}
-
-.stars::before,
-.stars::after{
+.stars::before,.stars::after{
   content:"✨ ✦ ✧ ✨ ✦ ✧ ✨";
   position:absolute;
   font-size:24px;
   animation:floatStars 6s linear infinite;
-  opacity:0.6;
+  opacity:.6;
 }
-
-.stars::after{
-  animation-delay:3s;
-  top:70%;
-}
+.stars::after{animation-delay:3s;top:70%}
 
 @keyframes floatStars{
   from{transform:translateX(-100%)}
   to{transform:translateX(100%)}
 }
-
 @keyframes fadeOut{
-  to{
-    opacity:0;
-    visibility:hidden;
-  }
+  to{opacity:0;visibility:hidden}
 }
 
 /* ================= الموقع ================= */
@@ -69,15 +48,8 @@ body{
   color:#3e2f1c;
 }
 
-header img{
-  width:100%;
-  height:200px;
-  object-fit:cover;
-}
-
-.main-header{
-  position:relative;
-}
+header img{width:100%;height:200px;object-fit:cover}
+.main-header{position:relative}
 
 .cart-icon{
   position:absolute;
@@ -92,7 +64,7 @@ header img{
   justify-content:center;
   font-size:26px;
   text-decoration:none;
-  box-shadow:0 4px 10px rgba(0,0,0,0.2);
+  box-shadow:0 4px 10px rgba(0,0,0,.2);
   color:#3e2f1c;
 }
 
@@ -121,12 +93,11 @@ header img{
 .product{
   background:white;
   border-radius:12px;
-  box-shadow:0 2px 6px rgba(0,0,0,0.1);
+  box-shadow:0 2px 6px rgba(0,0,0,.1);
   text-align:center;
   padding:1rem;
   transition:.2s;
 }
-
 .product:hover{transform:scale(1.03)}
 
 .product img{
@@ -143,7 +114,9 @@ header img{
   padding:10px 20px;
   border-radius:8px;
   cursor:pointer;
+  transition:.15s;
 }
+.add-to-cart:active{transform:scale(.93)}
 
 footer{
   background:#8b263e;
@@ -170,10 +143,31 @@ footer{
   align-items:center;
   justify-content:center;
   background:white;
-  box-shadow:0 4px 12px rgba(0,0,0,0.25);
+  box-shadow:0 4px 12px rgba(0,0,0,.25);
 }
-
 .social-buttons img{width:60%}
+
+/* ===== إشعار السلة ===== */
+#toast{
+  position:fixed;
+  bottom:30px;
+  left:50%;
+  transform:translateX(-50%) translateY(20px);
+  background:#8b263e;
+  color:white;
+  padding:14px 24px;
+  border-radius:30px;
+  font-size:14px;
+  opacity:0;
+  pointer-events:none;
+  transition:.4s;
+  box-shadow:0 6px 18px rgba(0,0,0,.3);
+  z-index:9999;
+}
+#toast.show{
+  opacity:1;
+  transform:translateX(-50%) translateY(0);
+}
   </style>
 </head>
 
@@ -189,10 +183,9 @@ footer{
 </div>
 
 <header class="main-header">
-  <img src="images/main logo.png" alt="صورة خشب">
+  <img src="images/main logo.png">
   <a href="cart.html" class="cart-icon">
-    🛒
-    <span class="cart-count" id="cartCount">0</span>
+    🛒 <span class="cart-count" id="cartCount">0</span>
   </a>
 </header>
 
@@ -228,59 +221,37 @@ footer{
       onclick="addToCart('Tray',5.5,'images/tr1.jpg')">إقتنِ</button>
   </div>
 
-  <div class="product">
-    <a href="product.html?id=toy">
-      <img src="images/ky.jfif">
-      <h3>Keyboard toy medal</h3>
-    </a>
-    <p>Relieve stress</p>
-    <button class="add-to-cart"
-      onclick="addToCart('Keyboard toy medal',2,'images/ky.jfif')">إقتنِ</button>
-  </div>
-
-  <div class="product">
-    <a href="product.html?id=coaster">
-      <img src="images/soon.jfif">
-      <h3>Cup coaster</h3>
-    </a>
-    <p>Tile surface</p>
-    <button class="add-to-cart"
-      onclick="addToCart('Cup coaster',5.5,'images/soon.jfif')">إقتنِ</button>
-  </div>
-
 </section>
 
-<div class="social-buttons">
-  <a href="https://wa.me/96877159550" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
-  </a>
-  <a href="https://instagram.com/hatbahh" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
-  </a>
-</div>
+<footer>© 2025 جميع الحقوق محفوظة لمتجر <strong>حطبه</strong></footer>
 
-<footer>
-  © 2025 جميع الحقوق محفوظة لمتجر <strong>حطبه</strong>
-</footer>
+<!-- إشعار + صوت -->
+<div id="toast">تمت الإضافة إلى السلة 🛒</div>
+<audio id="addSound" src="images/add.mp3" preload="auto"></audio>
 
 <script>
 function addToCart(name,price,image){
-  let cart=JSON.parse(localStorage.getItem("cart"))||[];
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
   cart.push({name,price,image});
   localStorage.setItem("cart",JSON.stringify(cart));
-  document.getElementById("cartCount").innerText=cart.length;
+
+  document.getElementById("cartCount").innerText = cart.length;
+
+  // صوت
+  const sound = document.getElementById("addSound");
+  sound.currentTime = 0;
+  sound.play();
+
+  // إشعار
+  const toast = document.getElementById("toast");
+  toast.classList.add("show");
+  setTimeout(()=>toast.classList.remove("show"),2000);
 }
 
-let cart=JSON.parse(localStorage.getItem("cart"))||[];
-document.getElementById("cartCount").innerText=cart.length;
-
-/* تظهر شاشة الترحيب مرة واحدة */
-if(localStorage.getItem("visited")){
-  document.getElementById("welcome");
-}else{
-  localStorage.setItem("visited","true");
-}
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
+document.getElementById("cartCount").innerText = cart.length;
 </script>
 
 </body>
 </html>
+
