--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ footer{
     <button class="add-to-cart"
       onclick="addToCart('Tray',5.5,'images/tr1.jpg')">إقتنِ</button>
   </div>
-
+<div class="product"> <a href="product.html?id=toy"> <img src="images/ky.jfif"> <h3>Keyboard toy medal</h3> </a> <p>Relieve stress</p> <button class="add-to-cart" onclick="addToCart('Keyboard toy medal',2,'images/ky.jfif')">إقتنِ</button> </div> <div class="product"> <a href="product.html?id=coaster"> <img src="images/soon.jfif"> <h3>Cup coaster</h3> </a> <p>Tile surface</p> <button class="add-to-cart" onclick="addToCart('Cup coaster',5.5,'images/soon.jfif')">إقتنِ</button> </div>
 </section>
 
 <footer>© 2025 جميع الحقوق محفوظة لمتجر <strong>حطبه</strong></footer>
@@ -254,4 +254,5 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
