--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@ footer{
     </a>
     <p>Coffee table</p>
     <button class="add-to-cart"
-      onclick="addToCart('Mother of Pearl',18,'images/mop1.jpg')">إقتنِ</button>
+      onclick="addToCart('Mother of Pearl',18,'images/mop1.jpg')">
+      إقتنِ
+    </button>
   </div>
 
   <div class="product">
@@ -208,7 +210,9 @@ footer{
     </a>
     <p>Coffee table</p>
     <button class="add-to-cart"
-      onclick="addToCart('Flowered surface',20,'images/fl1.jpg')">إقتنِ</button>
+      onclick="addToCart('Flowered surface',20,'images/fl1.jpg')">
+      إقتنِ
+    </button>
   </div>
 
   <div class="product">
@@ -218,9 +222,37 @@ footer{
     </a>
     <p>Mother of pearl</p>
     <button class="add-to-cart"
-      onclick="addToCart('Tray',5.5,'images/tr1.jpg')">إقتنِ</button>
+      onclick="addToCart('Tray',5.5,'images/tr1.jpg')">
+      إقتنِ
+    </button>
   </div>
-<div class="product"> <a href="product.html?id=toy"> <img src="images/ky.jfif"> <h3>Keyboard toy medal</h3> </a> <p>Relieve stress</p> <button class="add-to-cart" onclick="addToCart('Keyboard toy medal',2,'images/ky.jfif')">إقتنِ</button> </div> <div class="product"> <a href="product.html?id=coaster"> <img src="images/soon.jfif"> <h3>Cup coaster</h3> </a> <p>Tile surface</p> <button class="add-to-cart" onclick="addToCart('Cup coaster',5.5,'images/soon.jfif')">إقتنِ</button> </div>
+
+  <!-- المنتج 4 -->
+  <div class="product">
+    <a href="product.html?id=toy">
+      <img src="images/ky.jfif" alt="Keyboard toy medal">
+      <h3>Keyboard toy medal</h3>
+    </a>
+    <p>Relieve stress</p>
+    <button class="add-to-cart"
+      onclick="addToCart('Keyboard toy medal', 2, 'images/ky.jfif')">
+      إقتنِ
+    </button>
+  </div>
+
+  <!-- المنتج 5 -->
+  <div class="product">
+    <a href="product.html?id=coaster">
+      <img src="images/soon.jfif" alt="Cup coaster">
+      <h3>Cup coaster</h3>
+    </a>
+    <p>Tile surface</p>
+    <button class="add-to-cart"
+      onclick="addToCart('Cup coaster', 5.5, 'images/soon.jfif')">
+      إقتنِ
+    </button>
+  </div>
+
 </section>
 
 <footer>© 2025 جميع الحقوق محفوظة لمتجر <strong>حطبه</strong></footer>
@@ -254,5 +286,6 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
