--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>حطبه - متجر المنتجات الخشبية</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" herf="favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png" />
   <style>
 /* ================= شاشة الترحيب ================= */
 #welcome{
@@ -286,6 +286,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
