--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@ footer{
 
   <div class="product">
     <a href="product.html?id=table1">
-      <img src="images/mop1.jpg">
+      <img src="images/mop1.JPG">
       <h3>Mother of Pearl</h3>
     </a>
     <p>Coffee table</p>
     <button class="add-to-cart"
-      onclick="addToCart('Mother of Pearl',18,'images/mop1.jpg')">
+      onclick="addToCart('Mother of Pearl',18,'images/mop1.JPG')">
       إقتنِ
     </button>
   </div>
@@ -286,6 +286,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
