Fix HTML encoding and update image paths

--- a/product.html
+++ b/product.html
@@ -62,7 +62,7 @@ const products = {
     sub:"Coffee table",
     desc:"طاولة خشبية مزينة بقشر اللؤلؤ.",
     price:18,
-    images:["images/mop1.jpg","images/mop2.jpg","images/mop3.jpg","images/mop4.jpg"]
+    images:["images/mop1.JPG","images/mop2.jpg","images/mop3.jpg","images/mop4.jpg"]
   },
   flowered:{
     name:"Flowered surface",
@@ -169,3 +169,4 @@ function addToCart(){
 
 </body>
 </html>
+
