Fix HTML encoding issues in product.html

--- a/product.html
+++ b/product.html
@@ -62,7 +62,7 @@ const products = {
     sub:"Coffee table",
     desc:"طاولة خشبية مزينة بقشر اللؤلؤ.",
     price:18,
-    images:["images/mop1.JPG","images/mop2.jpg","images/mop3.jpg","images/mop4.jpg"]
+    images:["images/mop1.JPG","images/mop2.JPG","images/mop3.JPG","images/mop4.JPG"]
   },
   flowered:{
     name:"Flowered surface",
@@ -169,4 +169,5 @@ function addToCart(){
 
 </body>
 </html>
+
 
