Restore and update index.html with new content

--- a/index.html
+++ b/index.html
@@ -205,12 +205,24 @@ footer{
 
   <div class="product">
     <a href="product.html?id=flowered">
-      <img src="images/fl1.jpg">
+      <img src="images/fl1.JPG">
       <h3>Flowered surface</h3>
     </a>
     <p>Coffee table</p>
     <button class="add-to-cart"
-      onclick="addToCart('Flowered surface',20,'images/fl1.jpg')">
+      onclick="addToCart('Flowered surface-سطح بالزجاج',20,'images/fl1.JPG')">
+      إقتنِ
+    </button>
+  </div>
+  
+  <div class="product">
+    <a href="product.html?id=table1">
+      <img src="images/DK1.JPG">
+      <h3>Decoupage surface-ديكوباج</h3>
+    </a>
+    <p>Coffee table</p>
+    <button class="add-to-cart"
+      onclick="addToCart('ديكوباج',18,'images/DK1.JPG')">
       إقتنِ
     </button>
   </div>
@@ -227,7 +239,6 @@ footer{
     </button>
   </div>
 
-  <!-- المنتج 4 -->
   <div class="product">
     <a href="product.html?id=toy">
       <img src="images/ky.jfif" alt="Keyboard toy medal">
@@ -239,8 +250,7 @@ footer{
       إقتنِ
     </button>
   </div>
-
-  <!-- المنتج 5 -->
+  
   <div class="product">
     <a href="product.html?id=coaster">
       <img src="images/soon.jfif" alt="Cup coaster">
@@ -286,6 +296,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
