Fix HTML encoding issues in product.html

--- a/product.html
+++ b/product.html
@@ -58,18 +58,25 @@
 <script>
 const products = {
   table1:{
-    name:"Mother of pearl",
+    name:"Mother of pearl-قشر الصدف",
     sub:"Coffee table",
     desc:"طاولة خشبية مزينة بقشر اللؤلؤ.",
     price:18,
     images:["images/mop1.JPG","images/mop2.JPG","images/mop3.JPG","images/mop4.JPG"]
   },
   flowered:{
-    name:"Flowered surface",
+    name:"Flowered surface-فسيفساء بالزجاج الملون",
     sub:"Coffee table",
     desc:"طاولة بسطح فسيفساء.",
     price:20,
-    images:["images/fl1.jpg","images/fl2.jpg","images/fl3.jpg","images/fl4.jpg"]
+    images:["images/fl1.JPG","images/fl2.JPG","images/fl3.JPG","images/fl4.JPG"]
+   },
+    flowered:{
+    name:"Decoubage-ديكوباج",
+    sub:"Coffee table",
+    desc:"طاولة بالديكوباج.",
+    price:17.5,
+    images:["images/DK1.JPG","images/DK2.JPG","images/DK3.JPG","images/DK4.JPG"]
   },
   tray:{
     name:"Tray",
@@ -169,5 +176,6 @@ function addToCart(){
 
 </body>
 </html>
+
 
 
