Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ footer{
   <div class="product">
     <a href="product.html?id=table1">
       <img src="images/mop1.JPG">
-      <h3>Mother of Pearl</h3>
+      <h3>Mother of Pear-فسيفساء قشر الصدف</h3>
     </a>
     <p>Coffee table</p>
     <button class="add-to-cart"
@@ -206,7 +206,7 @@ footer{
   <div class="product">
     <a href="product.html?id=flowered">
       <img src="images/fl1.JPG">
-      <h3>Flowered surface</h3>
+      <h3>Flowered surface-فسيفساء بالزجاج الملون</h3>
     </a>
     <p>Coffee table</p>
     <button class="add-to-cart"
@@ -230,7 +230,7 @@ footer{
   <div class="product">
     <a href="product.html?id=tray">
       <img src="images/tr1.jpg">
-      <h3>Tray</h3>
+      <h3>Tray-صينية قشر الصدف</h3>
     </a>
     <p>Mother of pearl</p>
     <button class="add-to-cart"
@@ -241,24 +241,25 @@ footer{
 
   <div class="product">
     <a href="product.html?id=toy">
-      <img src="images/ky.jfif" alt="Keyboard toy medal">
+      <img src="images/ky.jfif" alt="Keyboard toy medal
+        ميدالية كيبورد(ديكوباج)">
       <h3>Keyboard toy medal</h3>
     </a>
-    <p>Relieve stress</p>
+    <p>Relieve stress,bag charm</p>
     <button class="add-to-cart"
-      onclick="addToCart('Keyboard toy medal', 2, 'images/ky.jfif')">
+      onclick="addToCart('Keyboard toy medal', 2, 'images/KY.JPG')">
       إقتنِ
     </button>
   </div>
   
   <div class="product">
     <a href="product.html?id=coaster">
-      <img src="images/soon.jfif" alt="Cup coaster">
+      <img src="images/CC.JPG" alt="Cup coaster-كوستر">
       <h3>Cup coaster</h3>
     </a>
     <p>Tile surface</p>
     <button class="add-to-cart"
-      onclick="addToCart('Cup coaster', 5.5, 'images/soon.jfif')">
+      onclick="addToCart('Cup coaster', 5, 'images/CC.JPG')">
       إقتنِ
     </button>
   </div>
@@ -296,6 +297,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
