--- a/product.html
+++ b/product.html
@@ -60,18 +60,18 @@ const products = {
   table1:{
     name:"Mother of pearl-قشر الصدف",
     sub:"Coffee table",
-    desc:"طاولة خشبية مزينة بقشر اللؤلؤ.",
+    desc:"طاولة خشبية مزينة بقشر الصدف.",
     price:18,
     images:["images/mop1.JPG","images/mop2.JPG","images/mop3.JPG","images/mop4.JPG"]
   },
-  flowered:{
+  table2:{
     name:"Flowered surface-فسيفساء بالزجاج الملون",
     sub:"Coffee table",
     desc:"طاولة بسطح فسيفساء.",
     price:20,
     images:["images/fl1.JPG","images/fl2.JPG","images/fl3.JPG","images/fl4.JPG"]
    },
-    flowered:{
+    table3:{
     name:"Decoubage-ديكوباج",
     sub:"Coffee table",
     desc:"طاولة بالديكوباج.",
@@ -86,18 +86,18 @@ const products = {
     images:["images/tr3.jpg","images/tr2.jpg","images/tr1.jpg"]
   },
   toy:{
-    name:"Keyboard toy medal",
+    name:"Keyboard toy medal-ميدالية كيبورد(ديكوباج)",
     sub:"Relieve stress",
-    desc:"لعبة ميدالية.",
+    desc:"ميدالية كيبورد-ديكوباج",
     price:2,
-    images:["images/ky.jfif"]
+    images:["images/KY1.JPG"]
   },
   coaster:{
     name:"Cup coaster",
     sub:"Tile surface",
     desc:"كوستر خشبي.",
     price:5.5,
-    images:["images/soon.jfif"]
+    images:["imageS/CC.JPG"]
   }
 };
 
@@ -176,6 +176,7 @@ function addToCart(){
 
 </body>
 </html>
+
 
 
 
