Restore index.html with original content

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ footer{
   </div>
   
   <div class="product">
-    <a href="product.html?id=table1">
+    <a href="product.html?id=decoupage">
       <img src="images/DK1.JPG">
       <h3>Decoupage surface-ديكوباج</h3>
     </a>
@@ -297,6 +297,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
