Fix HTML encoding issues in product.html

--- a/product.html
+++ b/product.html
@@ -64,14 +64,14 @@ const products = {
     price:18,
     images:["images/mop1.JPG","images/mop2.JPG","images/mop3.JPG","images/mop4.JPG"]
   },
-  table2:{
+  flowered:{
     name:"Flowered surface-فسيفساء بالزجاج الملون",
     sub:"Coffee table",
     desc:"طاولة بسطح فسيفساء.",
     price:20,
     images:["images/fl1.JPG","images/fl2.JPG","images/fl3.JPG","images/fl4.JPG"]
    },
-    table3:{
+  decoupage:{
     name:"Decoubage-ديكوباج",
     sub:"Coffee table",
     desc:"طاولة بالديكوباج.",
@@ -97,7 +97,7 @@ const products = {
     sub:"Tile surface",
     desc:"كوستر خشبي.",
     price:5.5,
-    images:["imageS/CC.JPG"]
+    images:["images/CC1.JPEG","images/CC2.JPEG","images/CC3.JPEG"]
   }
 };
 
@@ -176,6 +176,7 @@ function addToCart(){
 
 </body>
 </html>
+
 
 
 
