Fix HTML encoding issues in product.html

--- a/product.html
+++ b/product.html
@@ -90,7 +90,7 @@ const products = {
     sub:"Relieve stress",
     desc:"ميدالية كيبورد-ديكوباج",
     price:2,
-    images:["images/KY1.JPG"]
+    images:["images/KY.JPEG"]
   },
   coaster:{
     name:"Cup coaster",
@@ -176,6 +176,7 @@ function addToCart(){
 
 </body>
 </html>
+
 
 
 
