Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ footer{
     </a>
     <p>Coffee table</p>
     <button class="add-to-cart"
-      onclick="addToCart('ديكوباج',18,'images/DK1.JPG')">
+      onclick="addToCart('ديكوباج',17.5,'images/DK1.JPG')">
       إقتنِ
     </button>
   </div>
@@ -234,32 +234,32 @@ footer{
     </a>
     <p>Mother of pearl</p>
     <button class="add-to-cart"
-      onclick="addToCart('Tray',5.5,'images/tr1.jpg')">
+      onclick="addToCart('Tray',5,'images/tr1.jpg')">
       إقتنِ
     </button>
   </div>
 
   <div class="product">
     <a href="product.html?id=toy">
-      <img src="images/ky.jfif" alt="Keyboard toy medal
+      <img src="images/KY.jpeg" alt="Keyboard toy medal
         ميدالية كيبورد(ديكوباج)">
       <h3>Keyboard toy medal</h3>
     </a>
     <p>Relieve stress,bag charm</p>
     <button class="add-to-cart"
-      onclick="addToCart('Keyboard toy medal', 2, 'images/KY.JPG')">
+      onclick="addToCart('Keyboard toy medal', 2, 'images/KY.jpeg')">
       إقتنِ
     </button>
   </div>
   
   <div class="product">
     <a href="product.html?id=coaster">
-      <img src="images/CC.JPG" alt="Cup coaster-كوستر">
+      <img src="images/CC1.jpeg" alt="Cup coaster-كوستر">
       <h3>Cup coaster</h3>
     </a>
     <p>Tile surface</p>
     <button class="add-to-cart"
-      onclick="addToCart('Cup coaster', 5, 'images/CC.JPG')">
+      onclick="addToCart('Cup coaster', 5,'images/CC1.jpeg')">
       إقتنِ
     </button>
   </div>
@@ -297,6 +297,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
