Fix HTML encoding issues in product.html

--- a/product.html
+++ b/product.html
@@ -90,14 +90,14 @@ const products = {
     sub:"Relieve stress",
     desc:"ميدالية كيبورد-ديكوباج",
     price:2,
-    images:["images/KY.JPEG"]
+    images:["images/KY.jpeg"]
   },
   coaster:{
     name:"Cup coaster",
     sub:"Tile surface",
     desc:"كوستر خشبي.",
     price:5.5,
-    images:["images/CC1.JPEG","images/CC2.JPEG","images/CC3.JPEG"]
+    images:["images/CC1.jpeg","images/CC2.jpeg","images/CC3.jpeg"]
   }
 };
 
@@ -176,6 +176,7 @@ function addToCart(){
 
 </body>
 </html>
+
 
 
 
