--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@ footer{
 
   <div class="product">
     <a href="product.html?id=tray">
-      <img src="images/tr1.jpg">
+      <img src="images/tr1.JPG">
       <h3>Tray-صينية قشر الصدف</h3>
     </a>
     <p>Mother of pearl</p>
     <button class="add-to-cart"
-      onclick="addToCart('Tray',5,'images/tr1.jpg')">
+      onclick="addToCart('Tray',5,'images/tr1.JPG')">
       إقتنِ
     </button>
   </div>
@@ -297,6 +297,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
