Fix HTML encoding issues in product.html

--- a/product.html
+++ b/product.html
@@ -83,7 +83,7 @@ const products = {
     sub:"Mother of pearl",
     desc:"صينية خشبية.",
     price:5.5,
-    images:["images/tr3.jpg","images/tr2.jpg","images/tr1.jpg"]
+    images:["images/tr3.JPG","images/tr2.JPG","images/tr1.JPG"]
   },
   toy:{
     name:"Keyboard toy medal-ميدالية كيبورد(ديكوباج)",
@@ -176,6 +176,7 @@ function addToCart(){
 
 </body>
 </html>
+
 
 
 
