Add new product 'Charm' to product list
Added a new product 'Charm' with details and images.

--- a/product.html
+++ b/product.html
@@ -98,7 +98,14 @@ const products = {
     desc:"كوستر خشبي.",
     price:5.5,
     images:["images/CC1.jpeg","images/CC2.jpeg","images/CC3.jpeg"]
-  }
+  },
+  charm:{
+  name:"Charm - تشارم",
+  sub:"Bag charm / Accessory",
+  price:2,
+  images:["images/CH1.jpeg","images/CH2.jpeg","images/CH2.jpeg"]
+},
+
 };
 
 /* جلب id من الرابط */
@@ -176,6 +183,7 @@ function addToCart(){
 
 </body>
 </html>
+
 
 
 
