--- a/index.html
+++ b/index.html
@@ -263,6 +263,19 @@ footer{
       إقتنِ
     </button>
   </div>
+  
+  <div class="product">
+  <a href="product.html?id=charm">
+    <img src="images/CH1.jpeg" alt="Charm - تشارم">
+    <h3>Charm - تشارم</h3>
+  </a>
+  <p>Bag charm / Accessory</p>
+  <button class="add-to-cart"
+    onclick="addToCart('Charm - تشارم',0.9,'images/CH.jpeg')">
+    إقتنِ
+  </button>
+</div>
+
 
 </section>
 
@@ -297,6 +310,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
