Replace old HTML content with updated version

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ footer{
   <div class="product">
     <a href="product.html?id=coaster">
       <img src="images/CC1.jpeg" alt="Cup coaster-كوستر">
-      <h3>Cup coaster</h3>
+      <h3>Cup coaster-كوستر</h3>
     </a>
     <p>Tile surface</p>
     <button class="add-to-cart"
@@ -271,7 +271,7 @@ footer{
   </a>
   <p>Bag charm / Accessory</p>
   <button class="add-to-cart"
-    onclick="addToCart('Charm - تشارم',0.9,'images/CH.jpeg')">
+    onclick="addToCart('Charm - تشارم',0.9,'images/CH3.jpeg')">
     إقتنِ
   </button>
 </div>
@@ -310,6 +310,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
