Refactor index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -275,6 +275,17 @@ footer{
     إقتنِ
   </button>
 </div>
+  
+<div class="product">
+  <a href="custom.html">
+    <img src="images/NF1.png" alt="نفّذ تصميمك">
+    <h3>صمّمها بطريقتك 🎨</h3>
+  </a>
+  <p>تنفيذ خشب + فسيفساء حسب الطلب</p>
+  <button class="add-to-cart" onclick="window.location='custom.html'">
+    اطلب تصميمك
+  </button>
+</div>
 
 
 </section>
@@ -310,6 +321,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
