Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ footer{
   
 <div class="product">
   <a href="custom.html">
-    <img src="images/NF1.png" alt="نفّذ تصميمك">
+    <img src="images/custom.jpg" alt="نفّذ تصميمك">
     <h3>صمّمها بطريقتك 🎨</h3>
   </a>
   <p>تنفيذ خشب + فسيفساء حسب الطلب</p>
@@ -321,6 +321,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
