Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -278,11 +278,12 @@ footer{
   
 <div class="product">
   <a href="custom.html">
-    <img src="images/custom.jpg" alt="نفّذ تصميمك">
-    <h3>صمّمها بطريقتك 🎨</h3>
+    <img src="images/NF1.png" alt="نفّذ تصميمك">
+    <h3>خِدمة نفِّذ🎨</h3>
   </a>
   <p>تنفيذ خشب + فسيفساء حسب الطلب</p>
-  <button class="add-to-cart" onclick="window.location='custom.html'">
+  <button class="add-to-cart"
+    onclick="window.location='custom.html'">
     اطلب تصميمك
   </button>
 </div>
@@ -321,6 +322,7 @@ document.getElementById("cartCount").innerText = cart.length;
 
 </body>
 </html>
+
 
 
 
