Update custom.html by modifying content and placeholders
Removed existing text and updated placeholders in the form.

--- a/custom.html
+++ b/custom.html
@@ -48,16 +48,14 @@ button:hover{
 <body>
 
 <div class="box">
-  <h2>🎨 صمّمها بطريقتك</h2>
-  <p style="text-align:center">
-    عندك فكرة أو تصميم أعجبك؟
-أرسلها لنا، واحنا ننفذها لك بالخشب ونضيف لها تصميم فسيفساء على ذوقك وجوّك.
-  </p>
+  <h2></h2>
+  <img src="images/NF2.png" alt="شرح الخدمة" style="width:100%;border-radius:10px;margin-top:15px;">
+
 
   <input id="name" placeholder="اسمك">
   <input id="phone" placeholder="رقم التواصل">
   <textarea id="idea" rows="4"
-   placeholder="اشرح لنا فكرتك أو ماذا تريد تنفيذه..."></textarea>
+   placeholder="اشرح فكرتك"></textarea>
   <input type="file" id="img" accept="image/*">
 
   <button onclick="send()">إرسال الطلب</button>
