--- a/custom.html
+++ b/custom.html
@@ -48,28 +48,39 @@ button:hover{
 <body>
 
 <div class="box">
-  <h2></h2>
+  <h2>خِدمة نفِّذ</h2>
   <img src="images/NF2.png" alt="شرح الخدمة" style="width:100%;border-radius:10px;margin-top:15px;">
-
 
   <input id="name" placeholder="اسمك">
   <input id="phone" placeholder="رقم التواصل">
-  <textarea id="idea" rows="4"
-   placeholder="اشرح فكرتك"></textarea>
+  <textarea id="idea" rows="4" placeholder="اشرح فكرتك"></textarea>
   <input type="file" id="img" accept="image/*">
   <img id="preview" alt="معاينة الصورة" style="width:100%;margin-top:15px;border-radius:8px;display:none;">
-
 
   <button onclick="send()">إرسال الطلب</button>
 </div>
 
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage-compat.js"></script>
+
 <script>
-function send(){
-  let name = document.getElementById("name").value.trim();
-  let phone = document.getElementById("phone").value.trim();
-  let idea = document.getElementById("idea").value.trim();
-  let imageAttached = document.getElementById("img").files.length > 0;
-  // معاينة الصورة قبل الإرسال
+// ===== إعداد Firebase =====
+const firebaseConfig = {
+  apiKey: "AIzaSyAKrYrlNkIJioq3Eh5G6A4ZzHpgTZW1wn4",
+  authDomain: "hatbah-orders.firebaseapp.com",
+  projectId: "hatbah-orders",
+  storageBucket: "hatbah-orders.appspot.com",
+  messagingSenderId: "660907871957",
+  appId: "1:660907871957:web:ef500ea318d495c9f11c5c"
+};
+
+firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
+const storage = firebase.storage();
+
+// ===== معاينة الصورة قبل الإرسال =====
 document.getElementById("img").addEventListener("change", function(e){
   const file = e.target.files[0];
   if(file){
@@ -83,24 +94,43 @@ document.getElementById("img").addEventListener("change", function(e){
   }
 });
 
+// ===== دالة إرسال الطلب =====
+async function send(){
+  let name = document.getElementById("name").value.trim();
+  let phone = document.getElementById("phone").value.trim();
+  let idea = document.getElementById("idea").value.trim();
+  const file = document.getElementById("img").files[0];
 
   if(name=="" || phone=="" || idea==""){
     alert("يرجى تعبئة جميع الحقول الأساسية");
     return;
   }
 
-  let msg =
-    "طلب تنفيذ تفصيل:%0A%0A" +
-    "الاسم: " + encodeURIComponent(name) + "%0A" +
-    "رقم التواصل: " + encodeURIComponent(phone) + "%0A%0A" +
-    "التفاصيل:%0A" + encodeURIComponent(idea);
-
-  if(imageAttached){
-    msg += "%0A%0A📎 يوجد صورة مرفقة مع الطلب";
+  let imageURL = "";
+  if(file){
+    // رفع الصورة إلى Firebase Storage
+    const ref = storage.ref("orders/"+Date.now()+"_"+file.name);
+    const snap = await ref.put(file);
+    imageURL = await snap.ref.getDownloadURL();
   }
 
-  // فتح واتساب
-  window.open("https://wa.me/96877159550?text=" + msg);
+  // حفظ البيانات في Firestore
+  await db.collection("orders").add({
+    name,
+    phone,
+    idea,
+    image: imageURL,
+    created: new Date()
+  });
+
+  alert("✅ تم إرسال طلبك بنجاح");
+
+  // تفريغ الحقول
+  document.getElementById("name").value = "";
+  document.getElementById("phone").value = "";
+  document.getElementById("idea").value = "";
+  document.getElementById("img").value = "";
+  document.getElementById("preview").style.display = "none";
 }
 </script>
 
